Changes necessary to compile to Java 11 byte code. Since modules declared, <parent> fragments were added to each module to point at its parent and eliminated redundant declarations.